# OpenGL

./: .gitignore  .gitmodules  Animation.cpp  Animation.h  AudioManager.cpp  AudioManager.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  ControllerManager.cpp  ControllerManager.h  DebugDrawer.cpp  DebugDrawer.h  DirectionalLight.cpp  DirectionalLight.h  Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h  DuplicatedVertexPlane.cpp  DuplicatedVertexPlane.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityController.cpp  EntityController.h  EntityManager.cpp  EntityManager.h  FBX_Compatibility.txt  FindFmod.cmake  FindGLFW.cmake  FindLibNoise.cmake  FreeType.cpp  FreeType.h  ImageDrawer.cpp  ImageDrawer.h  Input.cpp  (+31 more)
audio/: AudioManager.h  AudioSystem.cpp
camera/: Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  GuiCamera.cpp  GuiCamera.h  MainCamera.cpp  MainCamera.h
display/: Display.h  DisplayManager.cpp  DisplayManager.h
exceptions/: PlayerAlreadyExistsException.h
fonts/: FreeType.cpp  FreeType.h
gamestate/: GameState.h  GameStateManager.cpp  GameStateManager.h  MenuGameState.cpp  MenuGameState.h
geometry/: DuplicatedVertexPlane.cpp  DuplicatedVertexPlane.h  Hexagon.cpp  Hexagon.h  HexagonGrid.h  Plane.cpp  Plane.h  Quad.cpp  Quad.h
glad/include/glad/: glad.h
gui/: Button.cpp  Button.h  CharacterInstance.cpp  CharacterInstance.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  Gui.cpp  Gui.h  GuiCollision.cpp  GuiCollision.h  GuiEventListener.cpp  GuiEvents.cpp  GuiEvents.h  GuiFrameBuffer.cpp  GuiManager.cpp  GuiManager.h  GuiRenderer.cpp  GuiRenderer.h  GuiShader.cpp  GuiShader.h  GuiWidget.cpp  GuiWidget.h  Text.cpp  Text.h
lib/assimp/: Makefile
lib/assimp/assimp-build/: Makefile
lib/assimp/assimp-build/code/: Makefile
lib/assimp/assimp-build/test/: Makefile
lib/assimp/code/: Makefile
lib/assimp/contrib/zlib/: Makefile
lib/assimp/test/: Makefile
lib/assimp/test/headercheck/: Makefile
lib/bullet/build3/vs2010/: 0_Bullet3Solution.sln  App_BulletExampleBrowser.vcxproj  App_BulletExampleBrowser.vcxproj.filters  App_HelloWorld.vcxproj  App_HelloWorld.vcxproj.filters  App_PhysicsServerSharedMemoryBridgeTCP.vcxproj  App_PhysicsServerSharedMemoryBridgeTCP.vcxproj.filters  App_PhysicsServerSharedMemoryBridgeUDP.vcxproj  App_PhysicsServerTCP.vcxproj  (+110 more)
lib/bullet/build_cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BULLET_PHYSICS.sln  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
lib/bullet/bullet-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/glad/: CMakeCache.txt
lib/glad/glad-build/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/glad/src/: glad.c
lib/glfw/: CMakeCache.txt
lib/glfw/glfw-build/: CMakeCache.txt
lib/stb_image/tests/: c_lexer_test.c
lib/stb_image/tools/: make_readme.c  unicode.c
lights/: DirectionalLight.cpp  DirectionalLight.h  LightManager.h  PointLight.cpp  PointLight.h
maths/: PoissonDiscSampler.h  PoissonGenerator.h
physics/: GuiPhysics.cpp  GuiPhysics.h  PhysicsManager.cpp  PhysicsManager.h  WorldPhysics.cpp  WorldPhysics.h
renderer/: RenderManager.cpp
res/: Map__17_Noise.tga  Map__7_Noise.tga  asd.uvw  floor.fbx  forest.fbx  rock_1.FBX  tree_1.FBX  tree_1.mtl
shaders/: ShaderProgram.cpp  fragment.glsl  vertex.glsl
shaders/cel/: fragment.glsl  vertex.glsl
shaders/glsl/: fragment.glsl
shaders/glsl/gui/: fragment.glsl  vertex.glsl
shaders/gui/: vertex.glsl
shaders/terrain/: TerrainShader.cpp  TerrainShader.h  fragment.glsl  vertex.glsl
src/: Animation.cpp  Animation.h  CMakeLists.txt  ControllerManager.cpp  ControllerManager.h  DebugDrawer.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityController.cpp  EntityController.h  EntityManager.cpp  EntityManager.h  Event.h  EventHandler.cpp  EventHandler.h  EventType.h  Listener.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Pawn.cpp  Pawn.h  Player.cpp  Player.h  Serializable.cpp  Serializable.h  Time.h  Tree.cpp  Tree.h  Utils.cpp  Utils.h  main.cpp
src/audio/: AudioManager.cpp  AudioSystem.h
src/camera/: Camera.h  CameraController.cpp  CameraController.h  CameraManager.cpp  CameraManager.h  GuiCamera.cpp  GuiCamera.h  MainCamera.cpp  MainCamera.h
src/controller/: BaseController.cpp  BaseController.h  ControllerManager.cpp  ControllerManager.h  KeyBoardController.cpp  KeyBoardController.h  KeyState.h  KeyboardController.cpp  KeyboardController.h  MouseController.cpp  MouseController.h  MouseEvent.h  PosEvent.h
src/display/: Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h
src/exceptions/: PlayerAlreadyExistsException.h
src/fonts/: FreeType.h
src/game/: Tile.cpp  Tile.h
src/gamestate/: GameState.cpp  GameStateManager.cpp
src/geometry/: DuplicatedVertexPlane.cpp  DuplicatedVertexPlane.h  Plane.cpp  Plane.h  Quad.cpp  Quad.h  Recticle.cpp  Recticle.h
src/gui/: Button.cpp  Button.h  CharacterInstance.cpp  CharacterInstance.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  GuiEventHandler.cpp  GuiEventHandler.h  GuiEventListener.cpp  GuiEventListener.h  GuiEvents.h  GuiFrameBuffer.cpp  GuiFrameBuffer.h  GuiManager.cpp  GuiManager.h  GuiWidget.cpp  GuiWidget.h  Slider.cpp  Slider.h  Text.cpp  Text.h
src/lights/: DirectionalLight.cpp  DirectionalLight.h  LightManager.cpp  PointLight.cpp  PointLight.h
src/maths/: Poisson.cpp
src/physics/: PhysicsManager.cpp  PhysicsManager.h  WorldPhysics.cpp  WorldPhysics.h
src/renderer/: RenderManager.cpp  RenderManager.h
src/scripts/: Lua.cpp  Lua.h
src/scripts/lua/: main.lua  test.lua
src/shaders/: ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h
src/shaders/glsl/: fragment.glsl
src/water/: Water.cpp  Water.h
stb_image/docs/: other_libs.md
terrain/: Terrain.cpp  Terrain.h
tests/: CMakeLists.txt  FindGTEST.cmake  GuiManagerTest.cpp  POCTest.cpp
water/: Water.cpp  Water.h  WaterShader.cpp  WaterShader.h
(+447 files in other folders)
